<resources>
    <string name="app_name">QuarantineCalorieCalc</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_admin_dashboard">Admin Dashboard</string>
    <string name="admin_overview_menu_item_title">Overview</string>
    <string name="admin_residents_menu_item_title">Residents</string>
    <string name="admin_supply_menu_item_title">Supply</string>
    <string name="admin_overview_fragment_title">Overview</string>
    <string name="admin_residents_fragment_title">Residents</string>
    <string name="admin_supply_fragment_title">Supply</string>
    <string name="test_admin_panel">Test Admin Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_button_text">Add</string>
    <string name="add_household_dialog_title">Add household</string>
    <string name="household_name_hint">Household\'s name</string>
    <string name="new_household_enter_name_error">Household name cannot be empty</string>
    <string name="status_text">Status:</string>
    <string name="supply_calories_title">Calories:</string>
    <string name="resident_status_title">Status:</string>
    <string name="supply_stock_title">Stock:</string>
    <string name="supply_s_name_hint">Supply\'s Name</string>
    <string name="calories_title">Calories:</string>
    <string name="kcal_title">kcal</string>
    <string name="stock_title">Stock:</string>
    <string name="unit_title">unit(s)</string>
    <string name="new_supply_enter_name_error">Supply name cannot be empty</string>
    <string name="new_supply_enter_calories_error">Calories must be between 1 and 10000</string>
    <string name="new_supply_enter_stock_error">Supply stock must be between 1 and 10000</string>
    <string name="title_activity_logged_in_user">LoggedInUserActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_household_selctor">Household Selector</string>
    <string name="restock_button_text">Restock</string>
    <string name="supply_stock_days_text"> days</string>
    <string name="supply_will_be_out_of_stock_in_days_text"> will be out of stock in </string>
    <string name="restock_supply_dialog_title">Restock supply</string>
    <string name="add_stock_amount">Add</string>
    <string name="admin_dashboard_loading_fragment_label">Loading</string>
    <string name="current_stock">Current Stock:</string>
    <string name="current_consumption">Current Consumption:</string>
    <string name="units">unit(s)</string>
    <string name="add_supply_dialog_title">Add Supply</string>
    <string name="logout">Logout</string>
    <string name="hint_enter_name">Enter name</string>
    <string name="btn_join_household">Join a household</string>
    <string name="btn_create_household">Create household</string>
    <string name="btn_logout">Logout</string>
    <string name="user_menu_item_status">Status</string>
    <string name="supply_total_consumption_title">Total Consumption</string>
</resources>